--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,175 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
 @import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700&display=swap');
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+html {
+  font-size: 14px;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+body {
+  font-family: 'Poppins', sans-serif;
+  background: #360033;
+  background: -webkit-linear-gradient(to right, #0b8793, #360033);
+  background: linear-gradient(to right, #0b8793, #360033);
+  color: #fff;
+  padding: 1.5rem 2rem 4rem 2rem;
+}
+
+.search-input {
+  color: #fff;
+  font-size: 1.2rem;
+  padding-left: 1rem;
+  padding-right: 1rem;
+  height: 2.5rem;
+  background-color: transparent;
+  outline: none;
+  border: 0.1rem solid #fff;
+  border-radius: 2rem;
+  transition: border-color 250ms ease;
+}
+
+.search-input:focus {
+  border-color: #6c8cff;
+}
+
+.search-input::placeholder {
+  font-size: 1rem;
+  color: #e1dddd;
+}
+.search-btn {
+  margin-left: 0.5rem;
+  font-size: 1.2rem;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 0.8rem;
+  background: #4e75ff;
+  border: none;
+  height: 2.5rem;
+  width: 6rem;
+  outline: none;
+  transition: background-color 250ms ease;
+}
+
+.search-btn:hover {
+  background-color: #6c8cff;
+}
+
+/* GALLERY */
+
+.gallery {
+  max-width: 1200px;
+  margin: 0 auto;
+  margin-top: 1.5rem;
+  display: grid;
+  gap: 1rem;
+}
+
+.gallery-item {
+  overflow: hidden;
+  border: 0.1rem solid #fff;
+  border-radius: 2rem;
+  transition: transform 250ms ease;
+  display: grid;
+  grid-template-rows: 2fr 1fr;
+}
+
+.gallery-item:hover {
+  transform: scale(0.95);
+}
+
+.image-desc {
+  display: flex;
+  column-gap: 1rem;
+  padding: 1rem;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  font-size: 0.8rem;
+}
+.image-desc-label {
+  color: #e1dddd;
+}
+
+.load-images-btn {
+  font-size: 1.2rem;
+  color: #fff;
+  font-weight: 500;
+  border-radius: 0.8rem;
+  background: #4e75ff;
+  border: none;
+  padding: 0.6rem 1rem;
+  outline: none;
+  transition: background-color 250ms ease;
+  display: block;
+  margin: 0 auto;
+  margin-top: 2rem;
+}
+
+.load-images-btn:hover {
+  background-color: #6c8cff;
+}
+
+.load-images-btn.hide {
+  display: none;
+}
+
+/* RESPONSIVE */
+
+@media (max-width: 599px) {
+  .form {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+  }
+  .search-btn {
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 600px) {
+  .gallery {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 1.5rem;
+  }
+}
+
+@media (min-width: 900px) {
+  .gallery {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+@media (min-width: 1440px) {
+  .image-desc {
+    font-size: 1rem;
+  }
+}
+
+/* LOADER */
+
+.loader.hide {
+  display: none;
+}
+.loader {
+  margin-top: 2rem;
+  display: flex;
+  justify-content: center;
+  font-size: 2rem;
+  font-weight: bold;
+  letter-spacing: 2px;
+  font-family: Arial, Helvetica, sans-serif;
+  color: #fff;
+  animation: smokeOut 1s ease-in-out infinite alternate;
+  text-shadow: 0 0 1px white;
+}
+.loader:before {
+  content: 'Loading';
+}
+
+@keyframes smokeOut {
+  100% {
+    opacity: 0.08;
+    filter: blur(5px);
+    letter-spacing: 4px;
+  }
 }
